# ckd-predictor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: Ensemble_Voting.joblib  Logistic_Regression.joblib  Random_Forest.joblib  SVM_RBF.joblib  SVM_Tuned.joblib  XGBoost.joblib  final_pipeline.joblib  full_pipeline.joblib  metrics.json  preprocessing.joblib  xgb_pipeline.joblib
data/: sample_patients.csv
scripts/: check_drift.py  predict.py  train.py
src/ckd/: config.py
src/ckd/ai/: claude_explain.py
src/ckd/api/: server.py
src/ckd/app/: dashboard.py
src/ckd/data/: loader.py  validator.py
src/ckd/db/: database.py
src/ckd/explain/: shap_explain.py
src/ckd/features/: pipeline.py
src/ckd/models/: evaluate.py  registry.py  train.py
src/ckd/monitoring/: drift.py  mlflow_tracking.py
tests/: conftest.py  test_api.py  test_data.py  test_db.py  test_features.py  test_models.py  test_monitoring.py
