[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "ckd-predictor"
version         = "1.0.0"
description     = "Production ML package for Chronic Kidney Disease prediction with REST API, Streamlit dashboard, and Claude AI explanations"
authors         = [{name = "Abhishek Ashok Deshmukh", email = "deshmukhmunna911@gmail.com"}]
readme          = "README.md"
requires-python = ">=3.10"
license         = {text = "MIT"}
keywords        = ["machine-learning", "healthcare", "kidney-disease", "classification", "xgboost", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "joblib>=1.3",
    "shap>=0.44",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "streamlit>=1.35",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "anthropic>=0.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "pytest-cov>=5.0", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
ckd-train     = "scripts.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
